[package]
name = "ssh-known-hosts"
description = "A small utility for quickly connecting to known ssh hosts"

version = "1.0.0"
authors = ["Josiah Hilden <jhilden13@gmail.com>"]
edition = "2018"

license-file = "LICENSE"
readme = "readme.md"
repository = "https://github.com/oldwomanjosiah/ssh-known-hosts"

exclude = [
	".github/",
	"tests/"
]

keywords = [
	"ssh",
	"cli",
	"tool",
]
categories = [
	"command-line-utilities",

]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
eyre = "0.6"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.8"
